modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/lambda_wrong_return.gd
func test():
	var lambda := func() -> int:
		return 'string'
	print(lambda.call())
